DC-5545: Add preferencesChanged repository

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -62,6 +62,10 @@ controllers {
 
 # Microservice specific config
 
+preferencesChanged { 
+  ttl = 14 # TTL in days
+}
+
 mongodb {
   uri = "mongodb://localhost:27017/preferences-changed-notifier"
 }
