DC-5546: add workitem repo for processing changes

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -62,9 +62,8 @@ controllers {
 
 # Microservice specific config
 
-preferencesChanged { 
-  ttl = 14 # TTL in days
-}
+preferencesChanged.ttl = 14 # TTL in days
+preferencesChangedWorkItems.retryInProgressAfter = 60000    // 1 minute in millis
 
 mongodb {
   uri = "mongodb://localhost:27017/preferences-changed-notifier"
