DC-5547: added endpoint

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -53,7 +53,7 @@ play.http.router = prod.Routes
 # The below controllers are the default exceptions to this rule.
 
 controllers {
-  uk.gov.hmrc.preferenceschangednotifier.controllers.MicroserviceHelloWorldController = {
+  uk.gov.hmrc.preferenceschangednotifier.controllers.PreferencesChangedController = {
     needsAuth = false
     needsLogging = false
     needsAuditing = false
@@ -74,6 +74,11 @@ microservice {
     auth {
       host = localhost
       port = 8500
+    }
+
+    eps-hods-adapter {
+      host = localhost
+      port = 9412
     }
   }
 }
