--- a/conf/application.conf
+++ b/conf/application.conf
@@ -27,8 +27,8 @@ play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.backend.http.JsonErrorHandl
 
 # Play Modules
 play.modules.enabled += "uk.gov.hmrc.preferenceschangednotifier.config.Module"
-
 play.modules.enabled += "uk.gov.hmrc.mongo.play.PlayMongoModule"
+play.modules.enabled += "uk.gov.hmrc.preferenceschangednotifier.scheduling.ScheduledJobModule"
 
 # The application languages
 # ~~~~~
@@ -63,7 +63,7 @@ controllers {
 # Microservice specific config
 
 preferencesChanged.ttl = 14 # TTL in days
-preferencesChangedWorkItems.retryInProgressAfter = 60000    // 1 minute in millis
+
 
 mongodb {
   uri = "mongodb://localhost:27017/preferences-changed-notifier"
@@ -83,3 +83,15 @@ microservice {
   }
 }
 
+preferencesChanged {
+  retryInProgressAfter = 1 minute
+  retryFailedAfter = 60
+}
+
+scheduling {
+  PublishSubscribersJob {
+    initialDelay = 5 seconds
+    interval = 20 seconds
+    taskEnabled = true
+  }
+}
