DC-5549: Remove temp variable and add useragent

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -46,6 +46,9 @@ play.i18n.langs = ["en"]
 # !!!WARNING!!! DO NOT CHANGE THIS ROUTER
 play.http.router = prod.Routes
 
+
+play.ws.useragent = ${appName}
+
 # Controller
 # ~~~~~
 # By default all controllers will have authorisation, logging and
