--- a/conf/application.conf
+++ b/conf/application.conf
@@ -83,6 +83,11 @@ microservice {
       host = localhost
       port = 9412
     }
+
+    updated-print-suppressions {
+      host = localhost
+      port = 8110
+    }
   }
 }
 
