DC-5831: Fixes, limit publication based on taxids

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -100,6 +100,6 @@ scheduling {
   PublishSubscribersJob {
     initialDelay = 5 seconds
     interval = 20 seconds
-    taskEnabled = true
+    taskEnabled = false
   }
 }
