DC-7450: Added rate limiting on publisher

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -93,7 +93,11 @@ microservice {
 
 preferencesChanged {
   retryInProgressAfter = 1 minute
-  retryFailedAfter = 60
+  retryFailedAfter = 15 minutes
+  rateLimit {
+    elements = 5
+    per = 1 second
+  }
 }
 
 scheduling {
