DC-7539: address pr comments

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -103,6 +103,6 @@ scheduling {
   PublishSubscribersJob {
     initialDelay = 5 seconds
     interval = 20 seconds
-    taskEnabled = false
+    taskEnabled = true
   }
 }
