DC-7937 Add ttl for pereferences changed work item repository

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -57,6 +57,7 @@ play.ws.useragent = ${appName}
 # Microservice specific config
 
 preferencesChanged.ttl = 14 # TTL in days
+preferencesChangedWorkItems.ttl = 14 # TTL in days
 
 
 mongodb {
